welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: reassignment to val
	if(a=b){
            ^sumDouble:3: error: missing arguments for method sumDouble in class sumDouble;
follow this method with `_' if you want to treat it as a partially applied function
		return sumDouble;
                       ^